Catch2 is running. added utils header

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,12 +3,19 @@ project(mailfs)
 
 set(CMAKE_CXX_STANDARD 17)
 
-file(GLOB SOURCES
+file(GLOB SRC_FILES
   src/*.cpp
 )
+list(FILTER SRC_FILES EXCLUDE REGEX ".*TestDotEnv\\.cpp$")
 
-add_executable(mailfs ${SOURCES})
+add_executable(mailfs
+  ${SRC_FILES}
+)
 
+target_include_directories(mailfs
+  PRIVATE
+    ${CMAKE_SOURCE_DIR}/src
+)
 find_package(Catch2 CONFIG REQUIRED)
 
 add_executable(DotEnvTests
@@ -16,14 +23,16 @@ add_executable(DotEnvTests
   src/TestDotEnv.cpp
 )
 
-target_include_directories(mailfs
+target_include_directories(DotEnvTests
   PRIVATE
-  ${CMAKE_SOURCE_DIR}/src
+    ${CMAKE_SOURCE_DIR}/src
 )
-target_link_libraries(mailfs
+
+target_link_libraries(DotEnvTests
   PRIVATE
-  Catch2::Catch2
+    Catch2::Catch2WithMain
 )
 
 include(CTest)
+enable_testing()
 add_test(NAME DotEnvTests COMMAND DotEnvTests)
