--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.16)
 project(mailfs)
 
 set(CMAKE_CXX_STANDARD 17)
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD 17)
 file(GLOB SRC_FILES
   src/*.cpp
 )
-list(FILTER SRC_FILES EXCLUDE REGEX ".*TestDotEnv\\.cpp$")
+list(FILTER SRC_FILES EXCLUDE REGEX ".*TestUtils\\.cpp$")
 
 add_executable(mailfs
   ${SRC_FILES}
@@ -16,23 +16,22 @@ target_include_directories(mailfs
   PRIVATE
     ${CMAKE_SOURCE_DIR}/src
 )
-find_package(Catch2 CONFIG REQUIRED)
+find_package(Catch2 3 REQUIRED)
 
-add_executable(DotEnvTests
-  src/DotEnv.cpp
-  src/TestDotEnv.cpp
+add_executable(test_utils
+  src/TestUtils.cpp
 )
 
-target_include_directories(DotEnvTests
+target_include_directories(test_utils
   PRIVATE
     ${CMAKE_SOURCE_DIR}/src
 )
 
-target_link_libraries(DotEnvTests
+target_link_libraries(test_utils
   PRIVATE
     Catch2::Catch2WithMain
 )
 
 include(CTest)
 enable_testing()
-add_test(NAME DotEnvTests COMMAND DotEnvTests)
+add_test(NAME test_utils COMMAND test_utils)
