--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.16)
+cmake_minimum_required(VERSION 3.22)
 project(mailfs)
 
 set(CMAKE_CXX_STANDARD 17)
@@ -16,22 +16,27 @@ target_include_directories(mailfs
   PRIVATE
     ${CMAKE_SOURCE_DIR}/src
 )
-find_package(Catch2 3 REQUIRED)
 
-add_executable(test_utils
-  src/TestUtils.cpp
-)
+option(BUILD_TESTS "Build Catch2 tests" OFF)
 
-target_include_directories(test_utils
-  PRIVATE
-    ${CMAKE_SOURCE_DIR}/src
-)
+if (BUILD_TESTS)
+  find_package(Catch2 3 REQUIRED)
 
-target_link_libraries(test_utils
-  PRIVATE
-    Catch2::Catch2WithMain
-)
+  add_executable(test_utils
+    src/TestUtils.cpp
+  )
 
-include(CTest)
-enable_testing()
-add_test(NAME test_utils COMMAND test_utils)
+  target_include_directories(test_utils
+    PRIVATE
+      ${CMAKE_SOURCE_DIR}/src
+  )
+
+  target_link_libraries(test_utils
+    PRIVATE
+      Catch2::Catch2WithMain
+  )
+
+  include(CTest)
+  enable_testing()
+  add_test(NAME test_utils COMMAND test_utils)
+endif()
